# Similarity-Search

./: .gitignore  ChromaDB.ipynb  Qdrand.ipynb  README.md  app.py  healthnews.json  healthnews_yr.json  pinecone.ipynb  pyproject.toml  startup_vectors.npy
chroma/: chroma.sqlite3
chroma/c1c89b1f-3ec5-4aed-a9ed-7c7e4f4230cf/: index_metadata.pickle
