[project]
name = "testes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.6.3",
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pinecone[grpc]>=6.0.1",
    "plotly>=6.0.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=3.4.1",
    "streamlit>=1.43.2",
]
